3.4/tutorials.md
---
layout: default
description: Learn how to work with ArangoDB, how to use different languages and integrations and get more in-depth information with this tutorials.
title: Arango DB tutorials, languages, Integrations and more 
---
Tutorials
=========

- [CRUD](https://www.arangodb.com/tutorials/arangodb-crud/){:target="_blank"}:
  Document CRUD (Create, Read, Update, Delete) with AQL and HTTP API

- [AQL](aql/tutorial.html):
  Introduction to ArangoDB's query language AQL

- [Performance Course](https://www.arangodb.com/arangodb-performance-course/){:target="_blank"}:
  Performance Optimization Basics: How to make your queries faster
 
- [Geo Queries](https://www.arangodb.com/using-arangodb-geo-index-cursor-via-aql/){:target="_blank"}:
  How to use the ArangoDB Geo Index Cursor via AQL
  
- [Foxx](foxx-getting-started.html):
  Create your first "Hello World!" Foxx service

- [ArangoSearch](https://www.arangodb.com/tutorials/arangosearch/){:target="_blank"}:
  The implementation of ArangoDB's view engine

Deployment & Administration
---------------------------

- [ArangoDB Starter](tutorials-starter.html):
  Starting an ArangoDB Cluster or database the easy way

- [Datacenter to datacenter Replication](tutorials-dc2-dc.html):
  A tutorial about the _ArangoSync_ DC2DC solution

- [Kubernetes](tutorials-kubernetes.html):
  Start ArangoDB on Kubernetes in 5 minutes
  
- [DC2DC on Kubernetes](tutorials-kubernetes-dc2-dc.html):
  Start DC2DC between two ArangoDB clusters running in Kubernetes 
  
- [Monitor ArangoDB](https://www.arangodb.com/tutorials/monitoring-collectd-prometheus-grafana/){:target="_blank"}:
  Set up a monitoring system for ArangoDB using _collectd_, _Prometheus_ and _Grafana_

- [Cluster Administration Course](https://www.arangodb.com/arangodb-cluster-course/){:target="_blank"}:
  Concepts, maintenance, resilience and troubleshooting

- [ArangoDB Oasis](https://www.arangodb.com/managed-service/){:target="_blank"}:
  Managed service for cluster deployments of any size

Graphs
------

- [Graph Course](https://www.arangodb.com/arangodb-graph-course/){:target="_blank"}:
  Get started with ArangoDB's graph related features
  
- [SmartGraphs](https://www.arangodb.com/using-smartgraphs-arangodb/){:target="_blank"}:
  Performance benefit for graphs sharded in an ArangoDB Cluster 
  
- [Pregel Community Detection](https://www.arangodb.com/pregel-community-detection/){:target="_blank"}:
  Find an underlying community structure in a network
  
- [Smartifier](https://www.arangodb.com/arangodb-smartifier/){:target="_blank"}:
  Transforming an existing Graph dataset into a SmartGraph for Enterprise level scaling

Languages and Integrations
--------------------------

- [Spring Data Demo](https://www.arangodb.com/tutorials/spring-data/){:target="_blank"}:
  Basic Spring Data Usage with a Game of Thrones dataset

Tutorial | Language | Driver
---------|----------|-------
[Node.js in 10 Minutes](https://www.arangodb.com/tutorials/tutorial-node-js/){:target="_blank"} | JavaScript | [ArangoJS](https://github.com/arangodb/arangojs){:target="_blank"}
[Java in 10 Minutes](https://www.arangodb.com/tutorials/tutorial-sync-java-driver/){:target="_blank"} | Java | [ArangoDB-Java-Driver](https://github.com/arangodb/arangodb-java-driver){:target="_blank"}
[PHP in 10 Minutes](https://www.arangodb.com/tutorials/tutorial-php/){:target="_blank"} | PHP | [ArangoDB-PHP](https://github.com/arangodb/arangodb-php){:target="_blank"}
[Python in 10 Minutes](https://www.arangodb.com/tutorials/tutorial-python/){:target="_blank"} | Python | [pyArango](https://github.com/tariqdaouda/pyArango){:target="_blank"}
