3.6/tutorials.md
---
layout: default
description: CRUD
---
Tutorials
=========

- [CRUD](https://www.arangodb.com/tutorials/arangodb-crud/){:target="_blank"}:
  Document CRUD (Create, Read, Update, Delete) with AQL and HTTP API

- [AQL](aql/tutorial.html):
  Introduction to ArangoDB's query language AQL

- [Performance Course](https://www.arangodb.com/arangodb-performance-course/){:target="_blank"}:
  Performance Optimization Basics: How to make your queries faster
 
- [Geo Queries](https://www.arangodb.com/using-arangodb-geo-index-cursor-via-aql/){:target="_blank"}:
  How to use the ArangoDB Geo Index Cursor via AQL
  
- [Foxx](foxx-getting-started.html):
  Create your first "Hello World!" Foxx service

- [ArangoSearch](https://www.arangodb.com/learn/search/tutorial/){:target="_blank"}:
  The implementation of ArangoDB's view engine

Deployment & Administration
---------------------------

- [Reduce Memory Footprint](tutorials-reduce-memory-footprint.html):
  Configuration options to restrict ArangoDB's memory usage and to reduce
  the CPU utilization

- [ArangoDB Starter](tutorials-starter.html):
  Starting an ArangoDB Cluster or database the easy way

- [Datacenter to datacenter Replication](tutorials-dc2-dc.html):
  A tutorial about the _ArangoSync_ DC2DC solution

- [Kubernetes](tutorials-kubernetes.html):
  Start ArangoDB on Kubernetes in 5 minutes
  
- [DC2DC on Kubernetes](tutorials-kubernetes-dc2-dc.html):
  Start DC2DC between two ArangoDB clusters running in Kubernetes 
  
- [Monitor ArangoDB](https://www.arangodb.com/tutorials/monitoring-collectd-prometheus-grafana/){:target="_blank"}:
  Set up a monitoring system for ArangoDB using _collectd_, _Prometheus_ and _Grafana_

- [Cluster Administration Course](https://www.arangodb.com/learn/operations/cluster-course/){:target="_blank"}:
  Concepts, maintenance, resilience and troubleshooting

Graphs
------

- [Graph Course](https://www.arangodb.com/arangodb-graph-course/){:target="_blank"}:
  Get started with ArangoDB's graph related features
  
- [SmartGraphs](https://www.arangodb.com/using-smartgraphs-arangodb/){:target="_blank"}:
  Performance benefit for graphs sharded in an ArangoDB Cluster 
  
- [Pregel Community Detection](https://www.arangodb.com/pregel-community-detection/){:target="_blank"}:
  Find an underlying community structure in a network
  
- [Smartifier](https://www.arangodb.com/arangodb-smartifier/){:target="_blank"}:
  Transforming an existing Graph dataset into a SmartGraph for Enterprise level scaling

Languages and Integrations
--------------------------

- [Java Driver v6 Tutorial](https://university.arangodb.com/courses/java-driver-tutorial-v6/){:target="_blank"}:
  An online course about the [ArangoDB Java Driver](https://github.com/arangodb/arangodb-java-driver){:target="_blank"}.

- [ArangoDB Go driver](https://university.arangodb.com/courses/go-driver-tutorial/){:target="_blank"}:
  Getting started with the official [Go driver](https://github.com/arangodb/go-driver){:target="_blank"}.

- [C#/.NET Driver Tutorial](https://university.arangodb.com/courses/csharp-dotnet-driver-tutorial/){:target="_blank"}:
  An online course about the [arangodb-net-standard driver](https://github.com/ArangoDB-Community/arangodb-net-standard){:target="_blank"}.

- [Node.js in 10 Minutes](https://www.arangodb.com/tutorials/tutorial-node-js/){:target="_blank"}:
  Tutorial about the JavaScript client [ArangoJS](https://github.com/arangodb/arangojs){:target="_blank"}.

- [Python Driver Tutorial](https://university.arangodb.com/courses/python-driver-tutorial/){:target="_blank"}:
  An online course about the [Python-Arango driver](https://github.com/ArangoDB-Community/python-arango){:target="_blank"}.

- [Spring Data Tutorial](https://university.arangodb.com/courses/spring-data-tutorial/){:target="_blank"}:
  Basic Spring Data usage with a Game of Thrones dataset.

- [Arangochair](https://www.arangodb.com/2017/03/arangochair-tool-listening-changes-arangodb/){:target="_blank"}:
  A tool for listening to changes in ArangoDB.

- [Massive Inserts into ArangoDB With Node.js](https://www.arangodb.com/2020/01/massive-inserts-into-arangodb-with-nodejs/){:target="_blank"}:
  Persisting data without tools and drivers.

- [BI Connectors](https://www.arangodb.com/bi-connector-arangodb/){:target="_blank"}:
  Connect your business intelligence tools to ArangoDB
  (Tableau, Power BI, Qlik, Grafana).
  